# odoors

./: Cargo.toml  README.md
examples/: odoo.rs
http/: odoo.http
src/: api.rs  error.rs  lib.rs  odoo.rs
