[package]
name = "odoors"
authors = ["Valerian DORCY <valerian.dorcy@gmail.com>"]
description = "Odoo library"
repository = "https://github.com/dorcyv/odoors"
license = "MIT"
version = "0.2.0"
edition = "2021"
exclude = [
    "http/*",
    ".github",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.132", features = ["derive"] }
serde_json = { version = "1.0.73" }
rand = "0.8.4"